--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
     - sudo apt-get -qq update
     - sudo apt-get install -y auditd
 script:
-    - sudo systemctl stop auditd
+    - sudo service auditd stop
     - make test
